# PythonProjectSkeleton

./: README.md  pyproject.toml
