[tool.poetry]
name = "poetry-get-started"
version = "0.1.0"
description = "Skeleton of python project"
authors = ["ChoiSeongRyeong <choisr2010@yonsei.ac.kr>"]
readme = "README.md"
packages = [{include = "poetry_get_started"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
